// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/blocksEditor/blocks/markdown should match Display snapshot 1`] = `
<div>
  <div
    class="octo-editor-preview"
    dangerouslySetInnerHTML={{__html: '<p>test-value</p>\n'}}
  />
</div>
`;

exports[`components/blocksEditor/blocks/markdown should match Input snapshot 1`] = `
<div>
  <div
    class="MarkdownContent"
    data-testid="markdown"
  >
    <div
      class="MarkdownEditor octo-editor  active"
    >
      <div
        class="MarkdownEditorInput"
      >
        <div
          class="DraftEditor-root"
        >
          <div
            class="DraftEditor-editorContainer"
          >
            <div
              aria-autocomplete="list"
              aria-expanded="false"
              class="notranslate public-DraftEditor-content"
              contenteditable="true"
              role="combobox"
              spellcheck="false"
              style="outline: none; user-select: text; white-space: pre-wrap; word-wrap: break-word;"
            >
              <div
                data-contents="true"
              >
                <div
                  class=""
                  data-block="true"
                  data-editor="123"
                  data-offset-key="123-0-0"
                >
                  <div
                    class="public-DraftStyleDefault-block public-DraftStyleDefault-ltr"
                    data-offset-key="123-0-0"
                  >
                    <span
                      data-offset-key="123-0-0"
                    >
                      <span
                        data-text="true"
                      >
                        test-value
                      </span>
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/blocksEditor/blocks/markdown should render markdown with bold text 1`] = `
<div>
  <div
    class="octo-editor-preview"
    dangerouslySetInnerHTML={{__html: '<p>This is <strong>bold</strong> text</p>\n'}}
  />
</div>
`;

exports[`components/blocksEditor/blocks/markdown should render markdown with code block 1`] = `
<div>
  <div
    class="octo-editor-preview"
    dangerouslySetInnerHTML={{__html: '<pre><code class="language-javascript">const x = 1;\n</code></pre>\n'}}
  />
</div>
`;

exports[`components/blocksEditor/blocks/markdown should render markdown with list 1`] = `
<div>
  <div
    class="octo-editor-preview"
    dangerouslySetInnerHTML={{__html: '<ul>\n<li>Item 1</li>\n<li>Item 2</li>\n<li>Item 3</li>\n</ul>\n'}}
  />
</div>
`;

exports[`components/blocksEditor/blocks/markdown should show placeholder when empty 1`] = `
<div>
  <div
    class="octo-editor-preview octo-placeholder"
    dangerouslySetInnerHTML={{__html: ''}}
  />
</div>
`;

